<resources>
    <string name="app_name">NavigationDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="firstFragTitle">Fragment One</string>
    <string name="firstFragInput">Enter String Here</string>
    <string name="firstFragBtn1">Go To Fragment 2</string>
    <string name="firstFragBtn2">Go To Fragment 3</string>

    <string name="secondFragTitle">Fragment Two</string>
    <string name="secondFragTextview">Output</string>
    <string name="secondFragBtn">Go To Fragment 3</string>

    <string name="thirdFragTitle">Fragment Three</string>
    <string name="thirdFragTextview">Output</string>
</resources>